// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValuesOverrideArgumentsSetting should match snapshot 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <h1
        class="text-neutral-400 text-3xl font-bold mb-2"
      >
        Value override as arguments
      </h1>
      <p
        class="text-sm text-neutral-350 mb-2"
      >
        Specify each override by declaring the variable name, value and its type.
      </p>
      <span
        aria-controls="radix-:r6:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="text-sm cursor-pointer text-brand-500 hover:text-brand-600 transition font-medium mb-5"
        data-state="closed"
        type="button"
      >
        How it works 
        <span
          class="icon-regular-circle-question shrink-0 text-xs"
          role="img"
        />
      </span>
      <form
        class="w-full"
      >
        <p>
          hello
        </p>
      </form>
    </section>
  </div>
</body>
`;

exports[`ValuesOverrideArgumentsSetting should match snapshot with GIT_REPOSITORY type 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <h1
        class="text-neutral-400 text-3xl font-bold mb-2"
      >
        Value override as arguments
      </h1>
      <p
        class="text-sm text-neutral-350 mb-2"
      >
        Specify each override by declaring the variable name, value and its type.
      </p>
      <span
        aria-controls="radix-:rk:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="text-sm cursor-pointer text-brand-500 hover:text-brand-600 transition font-medium mb-5"
        data-state="closed"
        type="button"
      >
        How it works 
        <span
          class="icon-regular-circle-question shrink-0 text-xs"
          role="img"
        />
      </span>
      <form
        class="w-full"
      >
        <p>
          hello
        </p>
      </form>
    </section>
  </div>
</body>
`;

exports[`ValuesOverrideArgumentsSetting should match snapshot with NONE type 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <h1
        class="text-neutral-400 text-3xl font-bold mb-2"
      >
        Value override as arguments
      </h1>
      <p
        class="text-sm text-neutral-350 mb-2"
      >
        Specify each override by declaring the variable name, value and its type.
      </p>
      <span
        aria-controls="radix-:r6:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="text-sm cursor-pointer text-brand-500 hover:text-brand-600 transition font-medium mb-5"
        data-state="closed"
        type="button"
      >
        How it works 
        <span
          class="icon-regular-circle-question shrink-0 text-xs"
          role="img"
        />
      </span>
      <form
        class="w-full"
      >
        <p>
          hello
        </p>
      </form>
    </section>
  </div>
</body>
`;

exports[`ValuesOverrideArgumentsSetting should match snapshot with YAML type 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <h1
        class="text-neutral-400 text-3xl font-bold mb-2"
      >
        Value override as arguments
      </h1>
      <p
        class="text-sm text-neutral-350 mb-2"
      >
        Specify each override by declaring the variable name, value and its type.
      </p>
      <span
        aria-controls="radix-:rd:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="text-sm cursor-pointer text-brand-500 hover:text-brand-600 transition font-medium mb-5"
        data-state="closed"
        type="button"
      >
        How it works 
        <span
          class="icon-regular-circle-question shrink-0 text-xs"
          role="img"
        />
      </span>
      <form
        class="w-full"
      >
        <p>
          hello
        </p>
      </form>
    </section>
  </div>
</body>
`;
